Users - fixed update user for thymeleaf & controller - changed UUID to Long & email -> username same name for Dto and model